7.RAD/zc702_workspace/radiation_injector/radiation_injector/logs/hls_run_csim_38920.backup.log
  **** HLS Build v2025.2 6295257
INFO: [HLS 200-2005] Using work_dir E:/source/.ITA/FPGA/7.RAD/zc702_workspace/radiation_injector/radiation_injector 
INFO: [HLS 200-2176] Writing Vitis IDE component file E:/source/.ITA/FPGA/7.RAD/zc702_workspace/radiation_injector/radiation_injector/vitis-comp.json
INFO: [HLS 200-10] Creating and opening component 'E:/source/.ITA/FPGA/7.RAD/zc702_workspace/radiation_injector/radiation_injector'.
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-2174] Applying component config ini file hls_config.cfg
INFO: [HLS 200-1465] Applying config ini 'syn.file=radiation_injector.cpp' from hls_config.cfg(7)
INFO: [HLS 200-10] Adding design file 'E:/source/.ITA/FPGA/7.RAD/zc702_workspace/radiation_injector/radiation_injector.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'tb.file=test_bench.cpp' from hls_config.cfg(8)
INFO: [HLS 200-10] Adding test bench file 'E:/source/.ITA/FPGA/7.RAD/zc702_workspace/radiation_injector/test_bench.cpp' to the project
INFO: [HLS 200-1465] Applying config ini 'syn.top=radiation_injector' from hls_config.cfg(9)
INFO: [HLS 200-1465] Applying config ini 'flow_target=vivado' from hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.amd.com/access/sources/dita/topic?Doc_Version=2025.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying config ini 'part=xc7z020clg400-2' from hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z020-clg400-2'
INFO: [HLS 200-1465] Applying config ini 'package.output.format=ip_catalog' from hls_config.cfg(5)
INFO: [HLS 200-2176] Writing Vitis IDE component file E:/source/.ITA/FPGA/7.RAD/zc702_workspace/radiation_injector/radiation_injector/vitis-comp.json
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [HLS 200-2191] C-Simulation will use clang-16 as the compiler
INFO: [HLS 200-2036] Building debug C Simulation binaries
   Compiling ../../../../radiation_injector.cpp in debug mode
In file included from ../../../../radiation_injector.cpp:1:
In file included from D:/AMDDesignTools/2025.2/Vitis/include\ap_int.h:10:
In file included from D:/AMDDesignTools/2025.2/Vitis/include\etc/ap_common.h:668:
In file included from D:/AMDDesignTools/2025.2/Vitis/include\etc/ap_private.h:68:
In file included from D:/AMDDesignTools/2025.2/Vitis/include\hls_half.h:26:
In file included from D:/AMDDesignTools/2025.2/Vitis/include/etc/hls_half_fpo.h:19:
In file included from D:/AMDDesignTools/2025.2/Vitis/include\hls_fpo.h:140:
In file included from D:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:150:
D:/AMDDesignTools/2025.2/Vitis/include\gmp.h:58:9: warning: '__GMP_LIBGMP_DLL' macro redefined [-Wmacro-redefined]
#define __GMP_LIBGMP_DLL  0
        ^
D:/AMDDesignTools/2025.2/Vitis/include/floating_point_v7_1_bitacc_cmodel.h:142:9: note: previous definition is here
#define __GMP_LIBGMP_DLL 1
        ^
../../../../radiation_injector.cpp:31:28: error: conditional expression is ambiguous; 'unsigned int' can be converted to 'ap_uint<32>' and vice versa
        lfsr = (seed == 0) ? 0xACE1u : seed;
                           ^ ~~~~~~~   ~~~~
1 warning and 1 error generated.
mingw32-make: *** [csim.mk:97: obj/radiation_injector.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
ERROR: CSIM Failed
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 1 seconds. Total elapsed time: 2.183 seconds; peak allocated memory: 134.781 MB.
